# manhwa-scraper-cli

./: LICENSE  README.md  analyzer.py  config.py  install.bat  install.sh  main.py  processor.py  pyproject.toml  requirements.txt  scraper.py  utils.py  visualizer.py
input/: word_banlist.txt
output/: processed_data.json  raw_data.json
