[tool.poetry]
name = "manhwa-analyzer"
version = "0.1.0"
description = "A CLI tool for analyzing manhwa data from Reddit"
authors = ["Luke Merletti <luke.merletti@gmail.com>"]
readme = "README.md"
packages = [{include = "manhwa_analyzer"}]

[tool.poetry.dependencies]
python = "^3.11"
praw = "^7.7.0"
python-dotenv = "^1.0.0"
wordcloud = "^1.9.2"
matplotlib = "^3.7.1"
fuzzywuzzy = "^0.18.0"
python-Levenshtein = "^0.21.0"
titlecase = "^2.4"
pandas = "^2.0.1"
inflect = "^6.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
manhwa-analyzer = "manhwa_analyzer.main:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = "E203"